issue #14 and issue #17: BasicLSTM > LSTM > GRU

--- a/notebooks/07 Leaderboard 1.0.ipynb
+++ b/notebooks/07 Leaderboard 1.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +102,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "57.25 39.96\n",
       "62.42 46.07\n",
+      "61.5 46.86\n",
+      "49.47 41.08\n",
       "71.85 47.72\n",
+      "2.74 3.87\n",
+      "77.54 51.12\n",
+      "68.26 49.11\n",
       "83.38 49.24\n",
+      "88.38 49.72\n",
+      "66.11 48.55\n",
       "81.81 50.39\n",
+      "76.71 50.05\n",
       "0.0 0.0\n",
       "0.0 0.0\n",
       "0.0 0.0\n",
@@ -134,36 +143,66 @@
       "87.66 47.95\n",
       "92.33 50.77\n",
       "79.92 50.47\n",
+      "61.91 41.12\n",
+      "58.36 46.78\n",
       "90.83 47.96\n",
-      "67.08 50.41\n",
-      "72.4 48.28\n",
+      "35.62 32.3\n",
+      "99.73 50.5\n",
+      "70.13 47.18\n",
+      "71.1 50.78\n",
+      "81.28 48.21\n",
+      "81.9 50.05\n",
+      "31.24 30.5\n",
+      "98.42 48.6\n",
       "99.76 44.22\n",
       "88.09 47.59\n",
       "99.76 47.5\n",
+      "80.18 51.61\n",
       "99.72 47.4\n",
       "74.37 49.08\n",
+      "83.81 53.37\n",
       "82.25 51.29\n",
-      "80.63 46.6\n",
+      "74.82 50.69\n",
+      "84.43 52.44\n",
+      "84.24 49.13\n",
+      "99.97 52.57\n",
+      "32.99 26.26\n",
+      "0.0 0.0\n",
+      "98.68 49.57\n",
+      "75.95 47.57\n",
+      "0.0 0.0\n",
       "0.0 0.0\n",
       "98.84 45.23\n",
-      "72.54 46.44\n",
+      "61.23 50.42\n",
       "62.48 40.96\n",
+      "75.58 50.05\n",
+      "74.83 54.27\n",
+      "0.0 0.0\n",
       "74.78 49.13\n",
+      "61.57 51.09\n",
+      "74.64 54.31\n",
+      "0.0 0.0\n",
+      "99.62 51.85\n",
+      "84.0 56.04\n",
+      "0.0 0.0\n",
+      "91.79 51.65\n",
       "66.11 49.29\n",
       "98.36 49.11\n",
       "43.44 39.35\n",
       "58.0 46.73\n",
       "0.0 0.0\n",
-      "42.34 41.41\n",
-      "97.94 53.35\n",
-      "97.91 50.09\n",
-      "63.1 49.76\n",
-      "84.89 47.01\n",
+      "98.59 48.62\n",
+      "99.03 48.89\n",
+      "84.68 48.78\n",
+      "99.58 50.27\n",
+      "99.57 50.4\n",
+      "98.44 48.88\n",
+      "90.79 45.15\n",
+      "94.2 46.59\n",
       "74.68 49.6\n",
       "77.01 48.38\n",
       "78.52 42.22\n",
-      "86.9 42.59\n",
-      "63.13 45.52\n"
+      "86.9 42.59\n"
      ]
     }
    ],
@@ -180,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +263,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>23</th>\n",
        "      <td>250</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
@@ -243,7 +282,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>27</th>\n",
        "      <td>250</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
@@ -262,60 +301,60 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>250</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glo50</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>[32]</td>\n",
-       "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>BasicLSTM</td>\n",
-       "      <td>[T]</td>\n",
-       "      <td>2018-09-05 150321</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>53.83</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
+       "      <th>74</th>\n",
        "      <td>100</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
-       "      <td>wan300</td>\n",
+       "      <td>wan50</td>\n",
        "      <td>False</td>\n",
-       "      <td>250</td>\n",
-       "      <td>[32, 16]</td>\n",
-       "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>BasicLSTM</td>\n",
-       "      <td>[R, IOB]</td>\n",
-       "      <td>2018-09-25 215108</td>\n",
-       "      <td>97.94</td>\n",
-       "      <td>53.35</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>250</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>wan100</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1000</td>\n",
+       "      <td>150</td>\n",
        "      <td>[16, 16]</td>\n",
        "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
        "      <td>False</td>\n",
        "      <td>0.005</td>\n",
        "      <td>BasicLSTM</td>\n",
-       "      <td>[IOB]</td>\n",
-       "      <td>2018-08-27 150000</td>\n",
-       "      <td>82.25</td>\n",
-       "      <td>51.29</td>\n",
+       "      <td>[R, IOB]</td>\n",
+       "      <td>2018-09-26 174440</td>\n",
+       "      <td>84.00</td>\n",
+       "      <td>56.04</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>250</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>wan50</td>\n",
+       "      <td>False</td>\n",
+       "      <td>250</td>\n",
+       "      <td>[16, 16]</td>\n",
+       "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>LSTM</td>\n",
+       "      <td>[R, IOB]</td>\n",
+       "      <td>2018-09-29 230549</td>\n",
+       "      <td>74.64</td>\n",
+       "      <td>54.31</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>250</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>wan50</td>\n",
+       "      <td>False</td>\n",
+       "      <td>250</td>\n",
+       "      <td>[16, 16]</td>\n",
+       "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>GRU</td>\n",
+       "      <td>[R, IOB]</td>\n",
+       "      <td>2018-09-28 175327</td>\n",
+       "      <td>74.83</td>\n",
+       "      <td>54.27</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -324,35 +363,35 @@
       ],
       "text/plain": [
        "    batch_size  chunks  ctxp embeddings_model  embeddings_trainable  epochs  \\\n",
-       "14         250   False     1            glo50                 False    1000   \n",
-       "18         250   False     1            glo50                 False    1000   \n",
-       "19         250   False     1            glo50                 False    1000   \n",
-       "46         100   False     1           wan300                 False     250   \n",
-       "33         250   False     1           wan100                 False    1000   \n",
+       "23         250   False     1            glo50                 False    1000   \n",
+       "27         250   False     1            glo50                 False    1000   \n",
+       "74         100   False     1            wan50                 False     150   \n",
+       "71         250   False     1            wan50                 False     250   \n",
+       "67         250   False     1            wan50                 False     250   \n",
        "\n",
        "   hidden_layers                                       input_labels  kfold  \\\n",
-       "14          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
-       "18          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...     25   \n",
-       "19          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...     25   \n",
-       "46      [32, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
-       "33      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
+       "23          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
+       "27          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...     25   \n",
+       "74      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
+       "71      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
+       "67      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
        "\n",
        "       lr         ru target_labels          timestamp  train-f1  valid-f1  \\\n",
-       "14  0.005  BasicLSTM           [T]  2018-09-22 130752     98.68     64.98   \n",
-       "18  0.005  BasicLSTM           [T]  2018-09-04 160737      0.00     58.59   \n",
-       "19  0.005  BasicLSTM           [T]  2018-09-05 150321      0.00     53.83   \n",
-       "46  0.005  BasicLSTM      [R, IOB]  2018-09-25 215108     97.94     53.35   \n",
-       "33  0.005  BasicLSTM         [IOB]  2018-08-27 150000     82.25     51.29   \n",
+       "23  0.005  BasicLSTM           [T]  2018-09-22 130752     98.68     64.98   \n",
+       "27  0.005  BasicLSTM           [T]  2018-09-04 160737      0.00     58.59   \n",
+       "74  0.005  BasicLSTM      [R, IOB]  2018-09-26 174440     84.00     56.04   \n",
+       "71  0.005       LSTM      [R, IOB]  2018-09-29 230549     74.64     54.31   \n",
+       "67  0.005        GRU      [R, IOB]  2018-09-28 175327     74.83     54.27   \n",
        "\n",
        "   version  \n",
-       "14     1.0  \n",
-       "18     1.0  \n",
-       "19     1.0  \n",
-       "46     1.0  \n",
-       "33     1.0  "
+       "23     1.0  \n",
+       "27     1.0  \n",
+       "74     1.0  \n",
+       "71     1.0  \n",
+       "67     1.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,26 +404,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('leaderboard.csv', sep=';', encoding='utf-8')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
