issue #18: Multiple dynamic archtectures for dual label RNNs

--- a/notebooks/07 Leaderboard 1.0.ipynb
+++ b/notebooks/07 Leaderboard 1.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "          \"input_labels\": [\"ID\", \"FORM\", \"MARKER\", \"GPOS\", \"FORM_CTX_P-1\", \"FORM_CTX_P+0\", \"FORM_CTX_P+1\"],\n",
     "          \"lr\": 0.005,\n",
     "          \"ru\": \"BasicLSTM\",\n",
+    "          \"r_depth\": -1,\n",
     "          \"target_labels\": [\"T\"],\n",
     "          \"kfold\": False,\n",
     "          \"version\": \"1.0\"}\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +120,11 @@
       "68.26 49.11\n",
       "83.38 49.24\n",
       "88.38 49.72\n",
+      "81.89 48.56\n",
       "66.11 48.55\n",
       "81.81 50.39\n",
       "76.71 50.05\n",
+      "23.77 21.52\n",
       "0.0 0.0\n",
       "0.0 0.0\n",
       "0.0 0.0\n",
@@ -150,16 +153,19 @@
       "99.73 50.5\n",
       "70.13 47.18\n",
       "71.1 50.78\n",
+      "77.59 50.97\n",
       "81.28 48.21\n",
       "81.9 50.05\n",
       "31.24 30.5\n",
       "98.42 48.6\n",
+      "81.88 49.48\n",
       "99.76 44.22\n",
       "88.09 47.59\n",
       "99.76 47.5\n",
       "80.18 51.61\n",
       "99.72 47.4\n",
       "74.37 49.08\n",
+      "94.24 55.33\n",
       "83.81 53.37\n",
       "82.25 51.29\n",
       "74.82 50.69\n",
@@ -173,6 +179,7 @@
       "0.0 0.0\n",
       "0.0 0.0\n",
       "98.84 45.23\n",
+      "90.49 51.62\n",
       "61.23 50.42\n",
       "62.48 40.96\n",
       "75.58 50.05\n",
@@ -184,6 +191,7 @@
       "0.0 0.0\n",
       "99.62 51.85\n",
       "84.0 56.04\n",
+      "81.5 55.93\n",
       "0.0 0.0\n",
       "91.79 51.65\n",
       "66.11 49.29\n",
@@ -198,10 +206,12 @@
       "99.57 50.4\n",
       "98.44 48.88\n",
       "90.79 45.15\n",
+      "96.99 48.92\n",
       "94.2 46.59\n",
       "74.68 49.6\n",
       "77.01 48.38\n",
       "78.52 42.22\n",
+      "92.82 48.79\n",
       "86.9 42.59\n"
      ]
     }
@@ -253,6 +263,7 @@
        "      <th>input_labels</th>\n",
        "      <th>kfold</th>\n",
        "      <th>lr</th>\n",
+       "      <th>r_depth</th>\n",
        "      <th>ru</th>\n",
        "      <th>target_labels</th>\n",
        "      <th>timestamp</th>\n",
@@ -263,7 +274,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>25</th>\n",
        "      <td>250</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
@@ -274,6 +285,7 @@
        "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
        "      <td>False</td>\n",
        "      <td>0.005</td>\n",
+       "      <td>-1</td>\n",
        "      <td>BasicLSTM</td>\n",
        "      <td>[T]</td>\n",
        "      <td>2018-09-22 130752</td>\n",
@@ -282,7 +294,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>29</th>\n",
        "      <td>250</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
@@ -293,6 +305,7 @@
        "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
        "      <td>25</td>\n",
        "      <td>0.005</td>\n",
+       "      <td>-1</td>\n",
        "      <td>BasicLSTM</td>\n",
        "      <td>[T]</td>\n",
        "      <td>2018-09-04 160737</td>\n",
@@ -301,7 +314,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>74</th>\n",
+       "      <th>80</th>\n",
        "      <td>100</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
@@ -312,6 +325,7 @@
        "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
        "      <td>False</td>\n",
        "      <td>0.005</td>\n",
+       "      <td>-1</td>\n",
        "      <td>BasicLSTM</td>\n",
        "      <td>[R, IOB]</td>\n",
        "      <td>2018-09-26 174440</td>\n",
@@ -320,7 +334,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
+       "      <th>81</th>\n",
        "      <td>250</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
@@ -331,30 +345,32 @@
        "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
        "      <td>False</td>\n",
        "      <td>0.005</td>\n",
-       "      <td>LSTM</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BasicLSTM</td>\n",
        "      <td>[R, IOB]</td>\n",
-       "      <td>2018-09-29 230549</td>\n",
-       "      <td>74.64</td>\n",
-       "      <td>54.31</td>\n",
+       "      <td>2018-10-02 010048</td>\n",
+       "      <td>81.50</td>\n",
+       "      <td>55.93</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
+       "      <th>55</th>\n",
        "      <td>250</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
-       "      <td>wan50</td>\n",
+       "      <td>wan100</td>\n",
        "      <td>False</td>\n",
        "      <td>250</td>\n",
        "      <td>[16, 16]</td>\n",
        "      <td>[ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...</td>\n",
        "      <td>False</td>\n",
        "      <td>0.005</td>\n",
-       "      <td>GRU</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BasicLSTM</td>\n",
        "      <td>[R, IOB]</td>\n",
-       "      <td>2018-09-28 175327</td>\n",
-       "      <td>74.83</td>\n",
-       "      <td>54.27</td>\n",
+       "      <td>2018-10-02 033225</td>\n",
+       "      <td>94.24</td>\n",
+       "      <td>55.33</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -363,32 +379,32 @@
       ],
       "text/plain": [
        "    batch_size  chunks  ctxp embeddings_model  embeddings_trainable  epochs  \\\n",
-       "23         250   False     1            glo50                 False    1000   \n",
-       "27         250   False     1            glo50                 False    1000   \n",
-       "74         100   False     1            wan50                 False     150   \n",
-       "71         250   False     1            wan50                 False     250   \n",
-       "67         250   False     1            wan50                 False     250   \n",
+       "25         250   False     1            glo50                 False    1000   \n",
+       "29         250   False     1            glo50                 False    1000   \n",
+       "80         100   False     1            wan50                 False     150   \n",
+       "81         250   False     1            wan50                 False     250   \n",
+       "55         250   False     1           wan100                 False     250   \n",
        "\n",
        "   hidden_layers                                       input_labels  kfold  \\\n",
-       "23          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
-       "27          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...     25   \n",
-       "74      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
-       "71      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
-       "67      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
+       "25          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
+       "29          [32]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...     25   \n",
+       "80      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
+       "81      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
+       "55      [16, 16]  [ID, FORM, MARKER, GPOS, FORM_CTX_P-1, FORM_CT...  False   \n",
        "\n",
-       "       lr         ru target_labels          timestamp  train-f1  valid-f1  \\\n",
-       "23  0.005  BasicLSTM           [T]  2018-09-22 130752     98.68     64.98   \n",
-       "27  0.005  BasicLSTM           [T]  2018-09-04 160737      0.00     58.59   \n",
-       "74  0.005  BasicLSTM      [R, IOB]  2018-09-26 174440     84.00     56.04   \n",
-       "71  0.005       LSTM      [R, IOB]  2018-09-29 230549     74.64     54.31   \n",
-       "67  0.005        GRU      [R, IOB]  2018-09-28 175327     74.83     54.27   \n",
+       "       lr  r_depth         ru target_labels          timestamp  train-f1  \\\n",
+       "25  0.005       -1  BasicLSTM           [T]  2018-09-22 130752     98.68   \n",
+       "29  0.005       -1  BasicLSTM           [T]  2018-09-04 160737      0.00   \n",
+       "80  0.005       -1  BasicLSTM      [R, IOB]  2018-09-26 174440     84.00   \n",
+       "81  0.005        1  BasicLSTM      [R, IOB]  2018-10-02 010048     81.50   \n",
+       "55  0.005        1  BasicLSTM      [R, IOB]  2018-10-02 033225     94.24   \n",
        "\n",
-       "   version  \n",
-       "23     1.0  \n",
-       "27     1.0  \n",
-       "74     1.0  \n",
-       "71     1.0  \n",
-       "67     1.0  "
+       "    valid-f1 version  \n",
+       "25     64.98     1.0  \n",
+       "29     58.59     1.0  \n",
+       "80     56.04     1.0  \n",
+       "81     55.93     1.0  \n",
+       "55     55.33     1.0  "
       ]
      },
      "execution_count": 5,
@@ -410,6 +426,13 @@
    "source": [
     "df.to_csv('leaderboard.csv', sep=';', encoding='utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
