--- a/notebooks/Structured Perceptron Trellis.ipynb
+++ b/notebooks/Structured Perceptron Trellis.ipynb
@@ -3482,7 +3482,70 @@
       "\n",
       "train f1:  45.25\n",
       "Tempo por Epoca:  200.08812308311462  s\n",
-      "## BEST MODEL saved at  ../outputs/1.0/notebooks/spn/models/bilstm_viterbi_h50_lr_0.0001_spn_2018-10-15_16-42-19\n"
+      "## BEST MODEL saved at  ../outputs/1.0/notebooks/spn/models/bilstm_viterbi_h50_lr_0.0001_spn_2018-10-15_16-42-19\n",
+      "Epoca  18\n",
+      "\n",
+      "Number of Sentences    :         239\n",
+      "Number of Propositions :         239\n",
+      "Percentage of perfect props :  18.83\n",
+      "\n",
+      "              corr.  excess  missed    prec.    rec.      F1\n",
+      "------------------------------------------------------------\n",
+      "   Overall      183     266     375    40.76   32.80   36.35\n",
+      "----------\n",
+      "        A0       75      60      48    55.56   60.98   58.14\n",
+      "        A1       92     121     125    43.19   42.40   42.79\n",
+      "        A2       11      63      33    14.86   25.00   18.64\n",
+      "        A3        0       0       7     0.00    0.00    0.00\n",
+      "        A4        0       0       8     0.00    0.00    0.00\n",
+      "    AM-ADV        0       0      13     0.00    0.00    0.00\n",
+      "    AM-CAU        0       0       7     0.00    0.00    0.00\n",
+      "    AM-DIR        0       0       1     0.00    0.00    0.00\n",
+      "    AM-DIS        0       0      13     0.00    0.00    0.00\n",
+      "    AM-EXT        0       0       2     0.00    0.00    0.00\n",
+      "    AM-LOC        1       5      29    16.67    3.33    5.56\n",
+      "    AM-MNR        0       0      16     0.00    0.00    0.00\n",
+      "    AM-NEG        0       0      16     0.00    0.00    0.00\n",
+      "    AM-PNC        0       0       7     0.00    0.00    0.00\n",
+      "    AM-PRD        0       0      10     0.00    0.00    0.00\n",
+      "    AM-TMP        4      17      40    19.05    9.09   12.31\n",
+      "------------------------------------------------------------\n",
+      "         V      235       8      11    96.71   95.53   96.11\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "valid f1:  36.35\n",
+      "\n",
+      "Number of Sentences    :        5295\n",
+      "Number of Propositions :        5295\n",
+      "Percentage of perfect props :  27.65\n",
+      "\n",
+      "              corr.  excess  missed    prec.    rec.      F1\n",
+      "------------------------------------------------------------\n",
+      "   Overall     4811    4965    7698    49.21   38.46   43.18\n",
+      "----------\n",
+      "        A0     1795    1167    1021    60.60   63.74   62.13\n",
+      "        A1     2687    2171    2103    55.31   56.10   55.70\n",
+      "        A2      220    1129     807    16.31   21.42   18.52\n",
+      "        A3        0       0     106     0.00    0.00    0.00\n",
+      "        A4        0       0      66     0.00    0.00    0.00\n",
+      "    AM-ADV        0       0     338     0.00    0.00    0.00\n",
+      "    AM-CAU        0       0     149     0.00    0.00    0.00\n",
+      "    AM-DIR        0       0      12     0.00    0.00    0.00\n",
+      "    AM-DIS        0       0     271     0.00    0.00    0.00\n",
+      "    AM-EXT        0       0      78     0.00    0.00    0.00\n",
+      "    AM-LOC       12      71     709    14.46    1.66    2.99\n",
+      "    AM-MNR        0       0     377     0.00    0.00    0.00\n",
+      "    AM-NEG        0       0     302     0.00    0.00    0.00\n",
+      "    AM-PNC        0       0     159     0.00    0.00    0.00\n",
+      "    AM-PRD        0       0     179     0.00    0.00    0.00\n",
+      "    AM-REC        0       0      60     0.00    0.00    0.00\n",
+      "    AM-TMP       97     427     961    18.51    9.17   12.26\n",
+      "------------------------------------------------------------\n",
+      "         V     5199     118     288    97.78   94.75   96.24\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "train f1:  43.18\n",
+      "Tempo por Epoca:  199.2952868938446  s\n"
      ]
     }
    ],
