issue #23: SPN minor experimental updates

--- a/notebooks/Structured Perceptron Trellis.ipynb
+++ b/notebooks/Structured Perceptron Trellis.ipynb
@@ -3547,6 +3547,76 @@
       "train f1:  43.18\n",
       "Tempo por Epoca:  199.2952868938446  s\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoca  19\n",
+      "\n",
+      "Number of Sentences    :         239\n",
+      "Number of Propositions :         239\n",
+      "Percentage of perfect props :  21.34\n",
+      "\n",
+      "              corr.  excess  missed    prec.    rec.      F1\n",
+      "------------------------------------------------------------\n",
+      "   Overall      194     247     364    43.99   34.77   38.84\n",
+      "----------\n",
+      "        A0       76      63      47    54.68   61.79   58.02\n",
+      "        A1      100     105     117    48.78   46.08   47.39\n",
+      "        A2       11      45      33    19.64   25.00   22.00\n",
+      "        A3        0       0       7     0.00    0.00    0.00\n",
+      "        A4        0       0       8     0.00    0.00    0.00\n",
+      "    AM-ADV        0       0      13     0.00    0.00    0.00\n",
+      "    AM-CAU        0       0       7     0.00    0.00    0.00\n",
+      "    AM-DIR        0       0       1     0.00    0.00    0.00\n",
+      "    AM-DIS        0       0      13     0.00    0.00    0.00\n",
+      "    AM-EXT        0       0       2     0.00    0.00    0.00\n",
+      "    AM-LOC        1       5      29    16.67    3.33    5.56\n",
+      "    AM-MNR        0       0      16     0.00    0.00    0.00\n",
+      "    AM-NEG        0       0      16     0.00    0.00    0.00\n",
+      "    AM-PNC        0       0       7     0.00    0.00    0.00\n",
+      "    AM-PRD        0       0      10     0.00    0.00    0.00\n",
+      "    AM-TMP        6      29      38    17.14   13.64   15.19\n",
+      "------------------------------------------------------------\n",
+      "         V      234       8      12    96.69   95.12   95.90\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "valid f1:  38.84\n",
+      "\n",
+      "Number of Sentences    :        5295\n",
+      "Number of Propositions :        5295\n",
+      "Percentage of perfect props :  30.95\n",
+      "\n",
+      "              corr.  excess  missed    prec.    rec.      F1\n",
+      "------------------------------------------------------------\n",
+      "   Overall     5299    4469    7210    54.25   42.36   47.57\n",
+      "----------\n",
+      "        A0     1845    1074     971    63.21   65.52   64.34\n",
+      "        A1     2935    1750    1855    62.65   61.27   61.95\n",
+      "        A2      344     808     683    29.86   33.50   31.57\n",
+      "        A3        0       0     106     0.00    0.00    0.00\n",
+      "        A4        0       0      66     0.00    0.00    0.00\n",
+      "    AM-ADV        0       0     338     0.00    0.00    0.00\n",
+      "    AM-CAU        0       0     149     0.00    0.00    0.00\n",
+      "    AM-DIR        0       0      12     0.00    0.00    0.00\n",
+      "    AM-DIS        0       0     271     0.00    0.00    0.00\n",
+      "    AM-EXT        0       0      78     0.00    0.00    0.00\n",
+      "    AM-LOC       30     143     691    17.34    4.16    6.71\n",
+      "    AM-MNR        0       1     377     0.00    0.00    0.00\n",
+      "    AM-NEG        0       0     302     0.00    0.00    0.00\n",
+      "    AM-PNC        0       0     159     0.00    0.00    0.00\n",
+      "    AM-PRD        0       0     179     0.00    0.00    0.00\n",
+      "    AM-REC        0       0      60     0.00    0.00    0.00\n",
+      "    AM-TMP      145     693     913    17.30   13.71   15.30\n",
+      "------------------------------------------------------------\n",
+      "         V     5232     128     255    97.61   95.35   96.47\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "train f1:  47.57\n",
+      "Tempo por Epoca:  201.39516496658325  s\n",
+      "## BEST MODEL saved at  ../outputs/1.0/notebooks/spn/models/bilstm_viterbi_h50_lr_0.0001_spn_2018-10-15_16-49-00\n"
+     ]
     }
    ],
    "source": [
